# entropy

./: .clang-format  .clang-tidy  .codespellignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NOTICE.txt  PACKAGING.md  README.md  THIRD_PARTY_NOTICES.md  settings.json
app/rendering/test/: AsciiClipboardTests.cpp  CMakeLists.txt  ImageDrawingHelpersTests.cpp  LightboxOffsetLabelFormatTests.cpp  LocalLinearResidualMetricTests.cpp  LocalNccMetricTests.cpp  PipelineHelpersTests.cpp  PixelEdgeGeometryTests.cpp  ScaleBarGeometryTests.cpp  ShaderProgramSetupTests.cpp  TextureSetupHelpersTests.cpp  VectorDrawingHelpersTests.cpp  XrayAttenuationTests.cpp
app/windowing/test/: CMakeLists.txt  ImageSelectionTests.cpp  LayoutFileSerializationTests.cpp  LinuxUiScaleTests.cpp  WindowingHeaderIncludeTests.cpp
lib/common/: AABB.h  AsyncTasks.h  CMakeLists.txt  ClipboardFormats.cpp  ClipboardFormats.h  ClipboardPayload.h  CoordinateFrame.cpp  CoordinateFrame.h  DirectionMaps.cpp  DirectionMaps.h  Exception.hpp  Expected.h  Geometry.h  HistogramSettings.h  InputParams.cpp  InputParams.h  InputParser.cpp  InputParser.h  IntersectionTypes.h  LoggingDefaults.h  LoggingSettings.h  MathFuncs.cpp  MathFuncs.h  ObjectCounter.hpp  SegmentationTypes.h  Types.cpp  Types.h  Utility.hpp  UuidRange.h  UuidUtility.cpp  UuidUtility.h  Viewport.cpp  Viewport.h  VnlMath.h
lib/common/test/: CMakeLists.txt  ClipboardFormatsTests.cpp  CommonHeaderIncludeTests.cpp  CoordinateFrameTests.cpp  DirectionMapsTests.cpp  InputParserTests.cpp  LoggingSettingsTests.cpp  MathFuncsTests.cpp  TypesTests.cpp  UuidUtilityTests.cpp  ViewportTests.cpp
lib/image/: CMakeLists.txt  DicomSeries.cpp  DicomSeries.h  Image.cpp  Image.h  ImageColorMap.cpp  ImageColorMap.h  ImageComponentBuffers.cpp  ImageDerivedData.cpp  ImageDerivedData.h  ImageHeader.cpp  ImageHeader.h  ImageHeaderOverrides.h  ImageIoInfo.cpp  ImageIoInfo.h  ImageQuantiles.cpp  ImageSettings.cpp  ImageSettings.h  ImageSpatialMetadata.cpp  ImageSpatialMetadata.h  ImageTimeAxis.cpp  ImageTimeAxis.h  ImageTransformations.cpp  ImageTransformations.h  ImageTypes.h  ImageUtility.cpp  ImageUtility.h  ImageWindowDefaults.cpp  ImageWindowDefaults.h  Isosurface.h  SegUtil.cpp  SegUtil.h  TDigest.h  TimePlaybackController.cpp  TimePlaybackController.h  WarpInversion.cpp  WarpInversion.h
lib/image/internal/: ImageCastHelper.tpp  ImageUtility.tpp  ImageUtilityDerivedImages.tpp  ImageUtilityItk.h  ImageUtilityItkImageConstruction.tpp  ImageUtilityItkIo.tpp  ImageUtilityLoad.tpp  ImageUtilityStatistics.tpp
lib/image/test/: CMakeLists.txt  ComprehensiveImageLoadingTests.cpp  DicomSeriesTests.cpp  ImageColorMapTests.cpp  ImageCoreTests.cpp  ImageHeaderTransformTests.cpp  ImageLoadingTests.cpp  ImageSettingsTests.cpp  ImageTimeAxisTests.cpp  ImageWindowDefaultsTests.cpp  SegmentationDerivedDataTests.cpp  TimePlaybackControllerTests.cpp  WarpInversionTests.cpp
lib/layout/: CMakeLists.txt  ImageIndexMapping.cpp  ImageIndexMapping.h  LayoutFileSerialization.cpp  LayoutFileSerialization.h  LayoutKindInfo.cpp  LayoutKindInfo.h  LayoutPreset.h  LayoutPresetInfo.cpp  LayoutPresetInfo.h  LayoutSpec.h  LayoutSpecJson.cpp  LayoutSpecJson.h  SyncGroupIndexMap.cpp  SyncGroupIndexMap.h
lib/layout/test/: CMakeLists.txt  ImageIndexMappingTests.cpp  LayoutFileSerializationTests.cpp  LayoutHeaderIncludeTests.cpp  LayoutKindInfoTests.cpp  LayoutPresetInfoTests.cpp  LayoutSpecJsonTests.cpp  SyncGroupIndexMapTests.cpp
lib/registration/: AffineTransformIO.cpp  AffineTransformIO.h  Artifacts.cpp  Artifacts.h  Availability.cpp  Availability.h  CMakeLists.txt  Capabilities.cpp  Capabilities.h  Commands.cpp  Commands.h  Config.cpp  Config.h  Execution.cpp  Execution.h  ImportPlan.cpp  ImportPlan.h  Jobs.cpp  Jobs.h  Json.cpp  Json.h  Process.cpp  Process.h  Progress.cpp  Progress.h  Setup.cpp  Setup.h  Types.cpp  Types.h  Validation.cpp  Validation.h
lib/registration/entropy_fireants_bridge/: __init__.py  __main__.py
lib/registration/fireants_bridge/: __init__.py  __main__.py  bridge.py
lib/registration/test/: AffineTransformIOTests.cpp  ArtifactsTests.cpp  AvailabilityTests.cpp  CMakeLists.txt  CapabilitiesTests.cpp  CommandsTests.cpp  ConfigTests.cpp  ExecutionTests.cpp  ImportPlanTests.cpp  JobsTests.cpp  JsonTests.cpp  ProcessTests.cpp  ProgressTests.cpp  SetupTests.cpp  (+1 more)
lib/ui/: AboutIcon.cpp  CMakeLists.txt  Clipboard.cpp  Clipboard.h  ClipboardMac.mm  ClipboardWin.cpp  DicomMetadataTable.cpp  DicomMetadataTable.h  GradientBackgroundRenderer.cpp  GradientBackgroundRenderer.h  GuiData.cpp  GuiData.h  Helpers.cpp  Helpers.h  ImGuiCustomControls.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h  ImageExport.cpp  ImageExport.h  IsosurfaceRangeModel.cpp  IsosurfaceRangeModel.h  LinuxUiScale.cpp  LinuxUiScale.h  NativeFileDialogs.cpp  NativeFileDialogs.h  Scaling.h  Style.cpp  Style.h  ThirdPartyLicenses.cpp  ThirdPartyLicenses.h  UiScaleManager.cpp  UiScaleManager.h
lib/viewer/: CMakeLists.txt  CameraSyncGroups.cpp  CameraSyncGroups.h  FrameHitGeometry.cpp  FrameHitGeometry.h  FrameImageSelection.cpp  FrameImageSelection.h  FrameViewport.cpp  FrameViewport.h  ImageSelection.cpp  ImageSelection.h  LayoutTypes.h  ViewModes.cpp  ViewModes.h  ViewTypes.cpp  ViewTypes.h
lib/viewer_types/: CMakeLists.txt  CameraSyncGroups.cpp  CameraSyncGroups.h  FrameImageSelection.cpp  FrameImageSelection.h  FrameViewport.cpp  FrameViewport.h  ImageSelection.cpp  ImageSelection.h  ViewModes.cpp  ViewModes.h  ViewTypes.cpp
test/: CMakeLists.txt  LayoutSpecJsonTests.cpp
test/deformation_warp_examples/: GenerateDeformationWarpExamples.cmake  README.md
test/image_generator/: CMakeLists.txt  GenerateImageExamples.cmake  ImageGenerator.cpp  ImageGenerator.h  ImageGeneratorMain.cpp  ImageGeneratorTests.cpp  Large2DImageGeneratorMain.cpp  README.md
test/warp_field_generator/: CMakeLists.txt  GenerateWarpFieldExamples.cmake  README.md  WarpFieldGenerator.cpp  WarpFieldGenerator.h  WarpFieldGeneratorMain.cpp  WarpFieldGeneratorTests.cpp
(+1484 files in other folders)
